rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-4f73208194a9ba9b.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-4f73208194a9ba9b: two-arrows.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows_rs-4f73208194a9ba9b.d: two-arrows.rs

two-arrows.rs:
